# pavutray

./: CMakeLists.txt  PKGBUILD  SysTray.pro  main.cpp  mainwindow.cpp
autostart/: pavutray.desktop
